--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -10,5 +10,7 @@
     <string name="title_activity_account">AccountActivity</string>
     <string name="title_activity_test">testActivity</string>
     <string name="settings">Settings</string>
+    <string name="title_activity_test_json">TestJSON</string>
+    <string name="title_activity_rest_ful_webservice">RestFulWebservice</string>
 
 </resources>
