--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -7,12 +7,11 @@
     <string name="title_activity_cookbook">Cookbook</string>
     <string name="title_activity_assistant">Assistant</string>
     <string name="title_activity_settings">Settings</string>
-
     <string name="drawer_open">Open drawer</string>
     <string name="drawer_close">Close drawer</string>
 
     <!-- Content Description -->
     <string name="desc_list_item_icon">Item Icon</string>
-
+    <string name="hello_world">Hello world!</string>
 
 </resources>
