--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -3,10 +3,10 @@
 
     <string name="app_name">CookPal</string>
     <string name="title_activity_main">Main</string>
-    <string name="title_activity_cookbook">Cookbook</string>
-    <string name="title_activity_assistant">Assistant</string>
-    <string name="title_activity_settings">Settings</string>
-    <string name="title_activity_logout">Logout</string>
+    <string name="title_activity_cookbook">cookbook</string>
+    <string name="title_activity_assistant">assistant</string>
+    <string name="title_activity_settings">settings</string>
+    <string name="title_activity_logout">logout</string>
 
     <string name="action_settings">Settings</string>
 
