--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="title_activity_logout">logout</string>
 
     <string name="action_settings">Settings</string>
+    <string name="action_share">Share</string>
 
     <string name="drawer_open">Open drawer</string>
     <string name="drawer_close">Close drawer</string>
