--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -2,11 +2,15 @@
 <resources>
 
     <string name="app_name">CookPal</string>
-    <string name="title_activity_main">Main</string>
-    <string name="title_activity_cookbook">cookbook</string>
-    <string name="title_activity_assistant">assistant</string>
-    <string name="title_activity_settings">settings</string>
-    <string name="title_activity_logout">logout</string>
+
+    <string name="nav_title_cookbook">cookbook</string>
+    <string name="nav_title_assistant">assistant</string>
+    <string name="nav_title_settings">settings</string>
+    <string name="nav_title_logout">logout</string>
+
+    <string name="title_activity_cookbook">COOKBOOK</string>
+    <string name="title_activity_assistant">ASSISTANT</string>
+    <string name="title_activity_settings">SETTINGS</string>
 
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
