UI done but crashes when navdrawer hits assistant button now

--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -34,4 +34,8 @@
     <string name="confirm_create_recipe_button">Create this recipe</string>
     <string name="title_activity_home_page">HomePage</string>
 
+    <!-- Assistant Strings -->
+    <string name="etc">ETC</string>
+    <string name="timeLeft">time left</string>
+
 </resources>
