--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -2,17 +2,22 @@
 <resources>
 
     <string name="app_name">CookPal</string>
+
     <string name="nav_title_cookbook">cookbook</string>
     <string name="nav_title_assistant">assistant</string>
     <string name="nav_title_settings">settings</string>
     <string name="nav_title_share">share</string>
     <string name="nav_title_logout">logout</string>
+
     <string name="title_activity_cookbook">COOKBOOK</string>
     <string name="title_activity_assistant">ASSISTANT</string>
     <string name="title_activity_share">SHARE</string>
     <string name="title_activity_settings">SETTINGS</string>
+    <string name="title_activity_add_recipe">ADD RECIPE</string>
+
     <string name="action_settings">Settings</string>
     <string name="action_share">Share</string>
+
     <string name="drawer_open">Open drawer</string>
     <string name="drawer_close">Close drawer</string>
 
@@ -28,10 +33,8 @@
     <string name="settings">Settings</string>
     <string name="title_activity_test_json">TestJSON</string>
     <string name="title_activity_rest_ful_webservice">RestFulWebservice</string>
-    <string name="title_activity_add_recipe">AddRecipe</string>
     <string name="confirm_create_recipe_button">Create this recipe</string>
     <string name="title_activity_home_page">HomePage</string>
-    <string name="title_activity_share_">share</string>
     <string name="title_activity_recipe">Recipe</string>
 
     <!-- Assistant Strings -->
