--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -33,7 +33,7 @@
     <string name="title_activity_home_page">HomePage</string>
     <string name="title_activity_share_">share</string>
     <string name="title_activity_recipe">Recipe</string>
-
+    <string name="title_activity_tts">Text to Speech Test</string>
     <!-- Assistant Strings -->
     <string name="etc">ETC</string>
     <string name="timeLeft">time left</string>
