--- a/CookPal/app/src/main/res/values/strings.xml
+++ b/CookPal/app/src/main/res/values/strings.xml
@@ -33,6 +33,7 @@
     <string name="title_activity_home_page">HomePage</string>
     <string name="title_activity_share_">share</string>
     <string name="title_activity_recipe">Recipe</string>
+    <string name="activity_edit_recipe">Edit Recipe</string>
 
     <!-- Assistant Strings -->
     <string name="etc">ETC</string>
